8231498: [lworld] Inline type use of Access API (compiler barrier support)